# cloudberrydb

./: .clang-tidy  .cloudberry-db.spec  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmessage  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  DEV_SETUP.md  Dockerfile  GNUmakefile.in  Makefile  NOTICE  PULL_REQUEST_TEMPLATE.md  README.CentOS.bash  README.CentOS.md  README.Docker.md  README.Linux.md  README.Rhel-Rocky.bash  README.Ubuntu.bash  README.Windows.md  README.amazon_linux  README.conda.md  README.debian  README.docker.md  README.linux.md  README.macOS.bash  README.macOS.md  README.md  README.ubuntu.bash  README.windows.md  SECURITY.md  THIRDPARTY  (+13 more)
contrib/interconnect/test/: CMakeLists.txt  elog_mock.c  ic_bench.c  ic_interface_test.c  ic_test_env.c  ic_test_env.h
contrib/pax_storage/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  FindDependencies.cmake  Makefile  README.md  init_file  pax_schedule
contrib/pax_storage/expected/: alter_distributed.out  ddl.out  detoast.out  filter.out  join.out  numeric.out  statistics.out  toast.out  types.out  update.out  update_gp.out  update_gp_optimizer.out  visimap_vec.out  visimap_vec_compact.out  visimap_vec_storage.out
contrib/pax_storage/hd-ci/: clang_tidy_pax.bash  compile_pax.bash
contrib/pax_storage/sql/: alter_distributed.sql  ddl.sql  detoast.sql  filter.sql  join.sql  numeric.sql  setup.sql  statistics.sql  teardown.sql  toast.sql  types.sql  update.sql  update_gp.sql  visimap_vec.sql  visimap_vec_compact.sql  visimap_vec_storage.sql
contrib/pax_storage/tools/: cpplint.py  gen_sql.c
contrib/vbf/: .gitignore  CMakeLists.txt  CPackConfig.txt  Makefile  README.md  build_vbf.sh  version.sh
contrib/vbf/CMakeModules/: FindSnappy.cmake  FindZstd.cmake  cmake_pretty.cmake
contrib/vbf/examples/: CMakeLists.txt  quickstart.c
contrib/vbf/src/: CMakeLists.txt  allocation.c  block_header.c  block_layout.c  codec.c  errors.c  input_stream.c  output_stream.c  stream_reader.c  stream_writer.c  vbf.h  vbf.pc.in  vbf_private.h  vbf_reader.c  vbf_writer.c  vfs.c  vfs.h
contrib/vbf/tests/: CMakeLists.txt  test.h  test_vbf.c
depends/: Makefile.in  README.md  conanfile.txt  conanfile_gpbackup.txt  conanfile_orca.txt  configure  configure.ac
gpAux/extensions/gpfdist/: .gitignore  GNUmakefile.in  configure  configure.ac  gpfdist.c  gpfdist_helper.c
libgpdbcost/: CMakeLists.txt  Makefile
libgpdbcost/include/gpdbcost/: CCostModelGPDB.h  CCostModelGPDBLegacy.h  CCostModelParamsGPDB.h  CCostModelParamsGPDBLegacy.h
libgpdbcost/src/: CCostModelGPDB.cpp  CCostModelGPDBLegacy.cpp  CCostModelParamsGPDB.cpp  CCostModelParamsGPDBLegacy.cpp  ICostModel.cpp  Makefile
libgpopt/: CMakeLists.txt  Makefile  version.h.in
libgpopt/include/gpopt/: exception.h  init.h  spinlock.h
libgpopt/src/: Makefile  exception.cpp  init.cpp
libgpopt/src/base/: CAutoOptCtxt.cpp  CCTEInfo.cpp  CCTEMap.cpp  CCTEReq.cpp  CCastUtils.cpp  CColConstraintsArrayMapper.cpp  CColConstraintsHashMapper.cpp  CColRef.cpp  CColRefComputed.cpp  CColRefSet.cpp  CColRefSetIter.cpp  CColRefTable.cpp  CColumnFactory.cpp  CConstraint.cpp  CConstraintConjunction.cpp  CConstraintDisjunction.cpp  CConstraintInterval.cpp  CConstraintNegation.cpp  CCostContext.cpp  CDatumSortedSet.cpp  CDefaultComparator.cpp  CDistributionSpecExternal.cpp  CDistributionSpecHashed.cpp  CDistributionSpecHashedNoOp.cpp  CDistributionSpecNonSingleton.cpp  CDistributionSpecRandom.cpp  CDistributionSpecReplicated.cpp  CDistributionSpecRouted.cpp  CDistributionSpecSingleton.cpp  CDistributionSpecStrictHashed.cpp  CDistributionSpecStrictRandom.cpp  CDistributionSpecStrictSingleton.cpp  CDistributionSpecUniversal.cpp  CDrvdProp.cpp  CDrvdPropCtxt.cpp  CDrvdPropCtxtPlan.cpp  CDrvdPropPlan.cpp  CDrvdPropRelational.cpp  CDrvdPropScalar.cpp  CEnfdDistribution.cpp  (+30 more)
libgpopt/src/engine/: CEngine.cpp  CEnumeratorConfig.cpp  CPartialPlan.cpp  CStatisticsConfig.cpp  Makefile
libgpopt/src/eval/: CConstExprEvaluatorDXL.cpp  CConstExprEvaluatorDefault.cpp  Makefile
libgpopt/src/mdcache/: CMDAccessor.cpp  CMDAccessorUtils.cpp  CMDCache.cpp  CMDKey.cpp
libgpopt/src/metadata/: CColumnDescriptor.cpp  CIndexDescriptor.cpp  CName.cpp  CPartConstraint.cpp  CTableDescriptor.cpp
libgpopt/src/minidump/: CDXLMinidump.cpp  CMetadataAccessorFactory.cpp  CMiniDumperDXL.cpp  CMinidumperUtils.cpp  CSerializableMDAccessor.cpp  CSerializableOptimizerConfig.cpp  CSerializablePlan.cpp  CSerializableQuery.cpp  CSerializableStackTrace.cpp
libgpopt/src/operators/: CCNFConverter.cpp  CExpression.cpp  CExpressionFactorizer.cpp  CExpressionHandle.cpp  CExpressionPreprocessor.cpp  CExpressionUtils.cpp  CHashedDistributions.cpp  CLogical.cpp  CLogicalApply.cpp  CLogicalAssert.cpp  CLogicalBitmapTableGet.cpp  CLogicalCTEAnchor.cpp  CLogicalCTEConsumer.cpp  CLogicalCTEProducer.cpp  CLogicalConstTableGet.cpp  CLogicalDML.cpp  CLogicalDelete.cpp  CLogicalDifference.cpp  CLogicalDifferenceAll.cpp  CLogicalDynamicBitmapTableGet.cpp  CLogicalDynamicGet.cpp  CLogicalDynamicGetBase.cpp  CLogicalDynamicIndexGet.cpp  CLogicalExternalGet.cpp  CLogicalFullOuterJoin.cpp  CLogicalGbAgg.cpp  CLogicalGbAggDeduplicate.cpp  CLogicalGet.cpp  CLogicalIndexApply.cpp  CLogicalIndexGet.cpp  CLogicalInnerApply.cpp  CLogicalInnerCorrelatedApply.cpp  CLogicalInnerIndexApply.cpp  CLogicalInnerJoin.cpp  CLogicalInsert.cpp  CLogicalIntersect.cpp  CLogicalIntersectAll.cpp  CLogicalJoin.cpp  CLogicalLeftAntiSemiApply.cpp  CLogicalLeftAntiSemiApplyNotIn.cpp  (+135 more)
libgpopt/src/optimizer/: COptimizer.cpp  (+2 more)
libgpos/: CMakeLists.txt  Makefile  config.h.in  version.h.in
libgpos/server/: CMakeLists.txt
libgpos/src/: Makefile  _api.cpp  utils.cpp
libgpos/targzs/: ivy-devel.xml  ivy.xml  ivysettings.xml
libnaucrates/: CMakeLists.txt  Makefile
libnaucrates/src/: CCostModelConfigSerializer.cpp  CDXLUtils.cpp  CIdGenerator.cpp  Makefile  exception.cpp  init.cpp  traceflags.cpp
server/: CMakeLists.txt  Makefile  dxl.xsd
server/src/: Makefile
(+36139 files in other folders)
